--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 # Base configs
-baseurl: "https://monteverdebob.github.com/photography"
+baseurl: "https://monteverdebob.github.io/photography"
 # baseurl: "" # Comment the above line and uncomment this to test the website locally
 image_fulls_loc: "/images/fulls"
 image_thumbs_loc: "/images/thumbs"
-google_analytics: "UA-46465113-2"
+google_analytics: "G-57L193T7CY"
 
 # UI configs
 title: "Photography by Bob Monteverde"
-subtitle: "See the world through my eyes!"
+subtitle: ""
 author: "Bob Monteverde"
 header:
  title: "Photography"
  subtitle: "by Bob Monteverde"
 footer:
  name: "Some Photography, By Bob Monteverde"
- bio: "I am a [principal] software engineer, specializing in Data Visualization in d3.js. While I take some time off, I've been learning photography."
+ bio: "I am a [principal] software engineer, specializing in Front End and Data Visualization in d3.js, ReactJS, etc. While I take some time off, I've been learning photography."
  github: "While I have not allocated the time to build a unique site, I'll give credit where credit is due.  This site is a <a href=\"https://github.com/rampatra/photography\">fork of this repo by Ram Patra</a>."
 web_design: "AJ"
 
 social_urls:
-  #twitter: "https://www.twitter.com/rampatra_"
-  #instagram: "https://www.instagram.com/ram_patra"
-  #dribbble: "https://dribbble.com/rampatra"
-  #linkedin: "https://in.linkedin.com/in/ram-patra"
-  #github: "https://www.github.com/rampatra"
+  #twitter: ""
+  #instagram: ""
+  #dribbble: ""
+  linkedin: "www.linkedin.com/in/bobmonteverde"
+  github: "https://www.github.com/monteverdebob"
 
 # Configure which exif data to display
 # Tag is the actual exif tag, icon is a fontawesome icon. Use JSON notation without line breaks
